--- a/templates/cookie.html
+++ b/templates/cookie.html
@@ -4,10 +4,77 @@
         Cookie Cutter Monster
     </head>
     <body>
-        	
+            
+                <div class="slidecontainer">
+                    <p>Cookie Cutter Size range (2in - 4in):</p>
+                    <input type="range" min="50" max="100" value="75" class="slider" id="cookieSize">
+                </div>
             <label><strong>Upload File : </strong><input type="file" id="uploadfiles" /></label><br/>
-            <script src="FileSaver.js"></script>
+            <script src="lib/FileSaver.js"></script>
+            <script src="lib/three.min.js"></script>
+            <script src="lib/STLLoader.js"></script>
+
           <script>
+          
+         var camera, scene, renderer;
+        var geometry, material, mesh;
+
+        init();
+
+        function init() {
+
+            camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 0.01, 1000 );
+            camera.position.z = 500;
+
+            scene = new THREE.Scene();
+            material = new THREE.MeshNormalMaterial();
+            console.log("Loading File");
+
+            (new THREE.STLLoader()).load( 'lib/tmp.stl', function ( geometry ) {
+
+
+                mesh = new THREE.Mesh( geometry, material )
+                scene.add( mesh );
+                //var box = new THREE.Box3().setFromObject( geometry );
+                //console.log( box.min, box.max, box.getSize() );
+                console.log(mesh.position)
+
+                geometry = new THREE.BoxGeometry( 200, 200, 200 );
+
+                mesh = new THREE.Mesh( geometry, material )
+                console.log(mesh.position)
+                scene.add( mesh );
+                renderer.render( scene, camera );
+
+                var box = new THREE.Box3().setFromObject( geometry );
+                console.log( box.min, box.max, box.getSize() );
+
+                animate()
+                });
+
+            renderer = new THREE.WebGLRenderer( { antialias: true } );
+            renderer.setSize( window.innerWidth, window.innerHeight );
+            document.body.appendChild( renderer.domElement );
+
+             }
+
+            function animate() {
+
+                requestAnimationFrame( animate );
+
+                mesh.rotation.x += 0.01;
+                mesh.rotation.y += 0.02;
+
+                renderer.render( scene, camera );
+
+            }
+                
+          </script>
+          <script>
+
+                function getCookieSize() {
+                return document.getElementById('cookieSize').value;
+                }
 
                 function download(filename, content) {
 
@@ -47,6 +114,7 @@
                     }
                 };
                 fd.append('image', file);
+                fd.append('size', getCookieSize())
                 xhr.send(fd);
             }
             }());
