Added Some Styling
Added Some Styling Needs Alot More

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 # Empty CSS file for your own CSS
 
 
-
+body {
+    background-image: url(../images/background.png);
+    background-color: #fff2f2;
+}
 
 #bg {
 	
