--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,14 @@ body {
 
 .canvasContainer {
     display: flex;
+    flex-wrap: wrap;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
+}
+
+.canvasContainer * {
+    margin-left: 1vw;
+    margin-right: 1vw;
 }
 
 .canvasContainer canvas {
@@ -15,11 +23,13 @@ body {
 
 #threeoutput {
     /* border: blue solid 2px; */
-    width:100vw;
+    /* width:100vw; */
+    min-width: 400px;
 }
 
 #canvasOutput {
     /* border: blue solid 2px; */
     width:100vw;
     min-width: 300px;
+    max-width: 30vw;
 }
