--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,14 @@
-
+:root {
+    --border-size: 0.125rem;
+    --duration: 250ms;
+    --ease: cubic-bezier(0.215, 0.61, 0.355, 1);
+    --font-family: monospace;
+    --color-primary: white;
+    --color-secondary: black;
+    --shadow: rgba(0, 0, 0, 0.1);
+    --space: 1rem;
+  }
+  
 /*
 
 body {
@@ -42,22 +52,61 @@ background-color: #123C69;
 
 body {
     background-color: aliceblue;
+    margin: 0;
 }
 
+grid-container {
+    margin-left: 15vw;
+    margin-right: 15vw;
+    display: grid;
+    grid-template-columns: .5fr auto .5fr;
+    text-align: center;
+    align-content: center;
+    justify-items: center;
+    height: 65vh;
+    grid-gap: 6rem;
+}
+
+title-card {
+    display:grid;
+    align-content: center;
+    text-align: center;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    width: 100vw;
+    background-color: lightslategray;
+}
+
+user-tip {
+    grid-column-start: 1;
+    grid-column-end: 4;
+}
+
+input-container {
+    grid-column-start: 1;
+    display: grid;
+    align-content: center;
+}
+
+clipart-selector {
+    display: grid;
+    grid-column-start: 1;
+}
 .canvasContainer {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 2vh;
-    margin-bottom: 2vh;
     align-items: center;
 }
 
 .canvasContainer * {
-    margin-left: 1vw;
-    margin-right: 1vw;
+    /* margin-left: 1vw;
+    margin-right: 1vw; */
 }
 
-.canvasContainer canvas {
+download-btn-container {
+    display: grid;
+    align-content: center;
+}
+
+canvas {
     /* border: red solid; */
     box-shadow: 2px 2px 39px -14px;
 }
@@ -70,7 +119,7 @@ body {
 
 #canvasOutput {
     /* border: blue solid 2px; */
-    width:100vw;
+    /* width:100vw;
     min-width: 300px;
-    max-width: 20vw;
+    max-width: 20vw; */
 }
